agrega formularios de inscripcion y fundacion fangio de sponsor

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>Desafioeco</title>
     <meta name="keywords" content="HTML5 Template"/>
     <meta name="description" content="Porto - Responsive HTML5 Template - 2.7.0">
-    <meta name="author" content="okler.net">
+    <meta name="author" content="flipstudios.com.ar">
 
     <!-- Mobile Metas -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -114,6 +114,8 @@
                         <ul class="dropdown-menu">
                             <li><a href="doc/reglamento.pdf"  target="_blank">Reglamento deportivo</a></li>
                             <li><a href="doc/reglamento_tecnico.pdf"  target="_blank">Reglamento técnico</a></li>
+                                                        <li><a href="doc/inscricion.zip"  target="_blank">Formularios de inscripción</a></li>
+
                         </ul>
                     </li>
                     <li class="dropdown">
@@ -195,17 +197,33 @@
             <!--<small>Someone famous <cite title="Source Title">Source Title</cite></small>-->
             <!--</blockquote>-->
 
-            <h2 class="more-spaced">Un campeonato de tres circuitos callejeros</h2>
-
             <!--<p class="lead">En el corazón de la Ciudad de Buenos Aires , en las calles del tradicional San Isidro y un-->
                 <!--gran final en los hermosos paisajes de San Luis serán los escenarios donde los prototipos competirán-->
                 <!--para determinar quién es el nuevo Campeón Argentino.</p>-->
 
             <h2 class="more-spaced">Una nueva era en vehículos</h2>
 
-            <p class="lead">En el marco de un programa educativo con el objeto de inculcar en los estudiantes el cuidado
-                del medio ambiente y la investigación de sistemas de trasporte no contaminantes, escuelas Técnicas de
-                todo el país nos permitirán ver sus creaciones basadas en las tecnologías del mañana. </p>
+            <p class="lead">Integrar esta categoría, ser parte de la organización y trabajar para que muchos chicos, estudiantes técnicos, puedan participar, es un gran orgullo para mí.</p>
+
+            <p>Correr en autos fue mi gran pasión, no me resulto nada sencillo subirme por primera vez a un auto de carreras, solo quería estar cerca, armarlo y compartir con los mecánicos esa pasión de tratar de ver que lo que uno hace con sus manos, es capaz de ganar una carrera.</p>
+
+ <p><b>DESAFÍO ECO</b> es eso, es la posibilidad aún más cercana de formar un equipo, trabajar con un plan, estudiar y poner en práctica esos conocimientos. Son meses de desarrollo, es compartir una misma pasión, es pensar y hacer rodar  algo que sale de un proyecto colectivo y si es posible verlo ganar.</p>
+
+  <p><b>DESAFÍO ECO</b> es mucho más que eso, es trabajar con las nuevas tendencias mundiales de la industria automotriz, las energías limpias y renovables.</p>
+
+   <p><b>DESAFÍO ECO</b> propone algo más, trabajar en conjunto, como lo hacen los grandes equipos de F1, donde hay un grupo de diseño, un grupo de constructores, unos destacados pilotos y un coordinador de todos esos esfuerzos. Por eso este año, será uno de los chicos quien esté a cargo de las relaciones de ese equipo con los organismos de Fiscalización del <b>ACA</b> y de la organización general del <b>DESAFÍO ECO</b>.</p>
+
+   <p><b>DESAFÍO ECO</b> será parte de vuestras vidas para siempre. No hay manera de olvidar estos inicios en la construcción de un prototipo eléctrico, no hay manera de practicar el automovilismo más integralmente que haciendo y pensando cada detalle de vuestros autos.</p>
+
+      <p>Les damos la bienvenida a un nuevo <b>CAMPEONATO ARGENTINO DE AUTOS ELECTRICOS</b>, les damos también todo el apoyo para que cada escuela pueda consultar todo lo necesario para desarrollar con eficiencia cada proyecto.</p>
+
+
+   <p>Trabajamos mucho para que aprendan, participen y se diviertan con estas competencias, a nivel nacional. Ya hay una escuela y un equipo que son Campeones Argentinos 2013, la Escuela Otto Krause. Este año, habrá más inscriptos, autos diferentes, circuitos nuevos y un gran desafío…el <b>CAMPEONATO ARGENTINO DESAFÍO ECO 2014</b>, fiscalizado por <b>ACA-FIA</b>.</p>
+
+   <p>Quiero de manera personal, desearles a todos que sea este el camino de un futuro mejor para Uds. de un mundo de nuevas tecnologías renovables y amigables con el medio ambiente, está ahora en sus manos, hacer un auto más eficiente…</p>
+
+    <p class="lead" style="float:right;"><b>Rubén Daray</b></p>
+    <br>
 
             <!--<a><p class="lead"><span class="alternative-font">MAS</span></p></a>-->
 
@@ -230,8 +248,25 @@
 </div>
 </section> -->
 
+<br>
+<br>
+<br>
+<br>
+<hr>
+
+
 <div class="row center">
+            <h2 class="more-spaced">Nos acompañan:</h2>
+
     <div class="owl-carousel" data-plugin-options='{"items": 6, "singleItem": false, "autoPlay": true}'>
+
+        <div>
+            <img class="img-responsive" src="img/logos/inet.jpg" alt="">
+        </div>
+
+        <div>
+            <img class="img-responsive" src="img/logos/min_educacion.jpg" alt="">
+        </div>
 
         <div>
             <img class="img-responsive" src="img/logos/bsasciudad.jpg" alt="">
@@ -242,7 +277,7 @@
         </div>
 
         <div>
-            <img class="img-responsive" src="img/logos/Ausa.jpg" alt="">
+            <img class="img-responsive" src="img/logos/fangio.jpg" alt="">
         </div>
 
         <div>
@@ -255,16 +290,12 @@
 
 
 
-        <div>
+       <!--  <div>
             <img class="img-responsive" src="img/logos/baggio.jpg" alt="">
-        </div>
+        </div> -->
 
         <div>
             <img class="img-responsive" src="img/logos/itba-logo.jpg" alt="">
-        </div>
-
-        <div>
-            <img class="img-responsive" src="img/logos/ATMA.jpg" alt="">
         </div>
 
         <div>
@@ -279,17 +310,19 @@
             <img class="img-responsive" src="img/logos/power.jpg" alt="">
         </div>
 
-        <div>
+       <!--  <div>
             <img class="img-responsive" src="img/logos/sportlink.jpg" alt="">
-        </div>
+        </div> -->
 
+
+    <div>
+            <img class="img-responsive" src="img/logos/imperial.jpg" alt="">
+        </div>
         <div>
             <img class="img-responsive" src="img/logos/davicom.jpg" alt="">
         </div>
 
-        <div>
-            <img class="img-responsive" src="img/logos/imperial.jpg" alt="">
-        </div>
+    
 
         <div>
             <img class="img-responsive" src="img/logos/tiempos.jpg" alt="">
@@ -305,19 +338,8 @@
 
     </div>
 </div>
+<hr>
 
-<section class="highlight top center">
-<div class="container">
-
-    <h2 style="width: 90%; float: left; margin-bottom: 20px;">Contactate con el ITBA para resolver tus dudas técnicas:</h2>
-    <a  href="underConstruction.html"
-        class="btn btn-primary center" style="background-color:#0099e6"> Asesoramiento técnico<br/>
-        <img class="center" src="img/logo-itba.png" alt="" style="width: 230px;">
-
-</a>
-
-</div>
-</section>
 
 </div>
 
