--- a/participantes.html
+++ b/participantes.html
@@ -113,6 +113,8 @@
                         <ul class="dropdown-menu">
                             <li><a href="doc/reglamento.pdf"  target="_blank">Reglamento deportivo</a></li>
                             <li><a href="doc/reglamento_tecnico.pdf"  target="_blank">Reglamento técnico</a></li>
+                                                        <li><a href="doc/inscricion.zip"  target="_blank">Formularios de inscripción</a></li>
+
                         </ul>
                     </li>
                     <li class="dropdown">
