--- a/participar.html
+++ b/participar.html
@@ -114,6 +114,8 @@
                         <ul class="dropdown-menu">
                             <li><a href="doc/reglamento.pdf"  target="_blank">Reglamento deportivo</a></li>
                             <li><a href="doc/reglamento_tecnico.pdf"  target="_blank">Reglamento técnico</a></li>
+                                                        <li><a href="doc/inscricion.zip"  target="_blank">Formularios de inscripción</a></li>
+
                         </ul>
                     </li>
                     <li class="dropdown">
@@ -251,12 +253,17 @@
 
 </div>
 
-<section class="highlight top">
-    <div class="container">
-        <h2 style="width: 70%; float: center; margin-bottom: 0;margin-left: 25%; margin-right: 50%;">Plazas y fechas en proceso de confirmación</h2>
+<section class="highlight top center">
+<div class="container">
 
-      
-    </div>
+    <h2 style="width: 90%; float: left; margin-bottom: 20px;">Contactate con el ITBA para resolver tus dudas técnicas:</h2>
+    <a  href="underConstruction.html"
+        class="btn btn-primary center" style="background-color:#0099e6"> Asesoramiento técnico<br/>
+        <img class="center" src="img/logo-itba.png" alt="" style="width: 230px;">
+
+</a>
+
+</div>
 </section>
 
 
