--- a/galeria.html
+++ b/galeria.html
@@ -115,6 +115,8 @@
                         <ul class="dropdown-menu">
                             <li><a href="doc/reglamento.pdf"  target="_blank">Reglamento deportivo</a></li>
                             <li><a href="doc/reglamento_tecnico.pdf"  target="_blank">Reglamento técnico</a></li>
+                                                        <li><a href="doc/inscricion.zip"  target="_blank">Formularios de inscripción</a></li>
+
                         </ul>
                     </li>
                         <li class="dropdown">
@@ -125,6 +127,7 @@
                             <ul class="dropdown-menu">
                                 <li><a href="underConstruction.html">Resultados</a></li>
                                 <li><a href="underConstruction.html">Webcams en pista</a></li>
+
                             </ul>
                         </li>
 
