--- a/participantes.html
+++ b/participantes.html
@@ -156,9 +156,9 @@
             <div class="col-md-12">
                 <h2 class="short word-rotator-title">
                     Estas son las <strong> escuelas participantes </strong>
-                    en las ediciones <strong> 2012 </strong>y <strong>2013</strong> 
+                    de la edición <strong> 2014</strong> 
                 </h2>
-                <h4 class="lead tall"> 31 escuelas de todo el país</h4>
+                <h4 class="lead tall"> 82 escuelas de Argentina y Uruguay</h4>
             </div>
         </div>
 
@@ -270,50 +270,93 @@
             <ul class="portfolio-list sort-destination" data-sort-id="portfolio">
                 <li class="col-md-4 isotope-item websites">
                     <ul class="list icons list-unstyled">
-
-                        <li><i class="icon icon-check"></i> Colegio Técnico N°37 Juana Koslay - San Luis</li>
-                        <li><i class="icon icon-check"></i> Instituto Nuestra Señora de Fatima</li>
-                        <li><i class="icon icon-check"></i> Escuela Técnica N°29 Reconquista de Buenos Aires</li>
-                        <li><i class="icon icon-check"></i> Colegio N°15 Ing. Agustín Mercau - San Luis</li>
-                        <li><i class="icon icon-check"></i> Escuela Técnica N°28 República Francesa</li>
-                        <li><i class="icon icon-check"></i> Escuela Técnica N°21 Fragata Libertad</li>
-                        <li><i class="icon icon-check"></i> Escuela Técnica N°25 Fray Luis Beltran</li>
-                        <li><i class="icon icon-check"></i> Escuela Técnica N°32 Gral. Jose de San Martín</li>
-                        <li><i class="icon icon-check"></i> Colegio N°9 Doming F. Sarmiento - San Luis</li>
-                        <li><i class="icon icon-check"></i> E.E.S.T N°4 - Bolougne Sur Mer</li>
-                        <li><i class="icon icon-check"></i> Escuela Técnica N°13 Ing. José Luis Delpini</li>
-                        <li><i class="icon icon-check"></i> Escuela Técnica N°3 15 de Noviembre - Entre Rios</li>
+                    <li><i class="icon icon-check"></i> Otto Krausse , Técnica N°1</li>
+                    <li><i class="icon icon-check"></i> Técnica N°11 D.E. 6 Manuel Belgrano</li>
+                    <li><i class="icon icon-check"></i> EEST N°1 "Antonio Bermejo"</li>
+                    <li><i class="icon icon-check"></i> Técnica N°35 DE 18: Ing. Eduardo Latzina</li>
+                    <li><i class="icon icon-check"></i> Colegio Técnico Nº9 "Domingo Faustino Sarmiento"</li>
+                    <li><i class="icon icon-check"></i> Escuela Técnica N° 37 Ing. Germán Áve Lallemant</li>
+                    <li><i class="icon icon-check"></i> Colegio Nº17 V Brigada Aerea V.Mercedes</li>
+                    <li><i class="icon icon-check"></i> Esc. IPEM N°50 "Ing. Emilio F. Olmos"</li>
+                    <li><i class="icon icon-check"></i> Técnica N°25: Tte 1° de Art. Fray Luis Beltrán</li>
+                    <li><i class="icon icon-check"></i> Escuela Politécnica Manuel Belgrano</li>
+                    <li><i class="icon icon-check"></i> Técnica N°29: Reconquista de Buenos Aires</li>
+                    <li><i class="icon icon-check"></i> Técnica N°17 DE 13: Brig.G. Cornelio Saavedra</li>
+                    <li><i class="icon icon-check"></i> Técnica N°34 DE 9: Ing. Enrique Martín Hermitte</li>
+                    <li><i class="icon icon-check"></i> Escuelas Técnicas Raggio</li>
+                    <li><i class="icon icon-check"></i> Escuela Técnica N° 26 Gobernador Elías Adre</li> 
+                    <li><i class="icon icon-check"></i> Técnica N°32 DE 14: Gral. Jose de San Martin</li>
+                    <li><i class="icon icon-check"></i> Técnica N°26: Confederación Suiza</li>
+                    <li><i class="icon icon-check"></i> Técnica N°14 DE 5: Libertad</li>
+                    <li><i class="icon icon-check"></i> Colegio N°15: "Ing. Agustín Mercau"</li>
+                    <li><i class="icon icon-check"></i> Escuela Técnica Superior Pedro Blanes Viale</li>
+                    <li><i class="icon icon-check"></i> Técnica N°8: Paula Albarracin de Sarmiento</li>
+                    <li><i class="icon icon-check"></i> Instituto Nuestra Sra. De Fátima</li>
+                    <li><i class="icon icon-check"></i> Técnica N°13 Ing. J.L. Delpini</li>
+                    <li><i class="icon icon-check"></i> EET N° 5 " 15 de noviembre"  </li>
+                    <li><i class="icon icon-check"></i> Técnica N°21: Fragata Libertad</li>
+                    <li><i class="icon icon-check"></i> Instituto Técnico Don Orione</li>
+                    <li><i class="icon icon-check"></i> Centro Educativo N° 20: Juan W. Gez</li> 
+                    <li><i class="icon icon-check"></i> Técnica N°28: República Francesa</li>
                     </ul>
                 </li>
                 <li class="col-md-4 isotope-item websites">
                     <ul class="list icons list-unstyled">
-                        <li><i class="icon icon-check"></i> Escuela Técnica N°10 Fray Luis Beltran</li>
-                        <li><i class="icon icon-check"></i> Escuela Técnica N°9 Luis A. Huergo</li>
-                        <li><i class="icon icon-check"></i> Escuela Técnica N°8 Paula Albarracin de Sarmiento</li>
-                        <li><i class="icon icon-check"></i> Escuela Técnica N°14 Libertad</li>
-                        <li><i class="icon icon-check"></i> Escuela Técnica N°11 Manuel Belgrano</li>
-                        <li><i class="icon icon-check"></i> Escuela Técnica N°1 Otto Krause</li>
-                        <li><i class="icon icon-check"></i> Escuela IPEM N° 50 Ing.Emilio Olmos - Córdoba</li>
-                        <li><i class="icon icon-check"></i> Escuela Técnica N°26 Confederación Suiza</li>
-                        <li><i class="icon icon-check"></i> Escuela Técnica N°35 Ing. Eduardo Latzina</li>
-                        <li><i class="icon icon-check"></i> Escuela Técnica N°34 Ing. E. M. Hermitte</li>
-                        <li><i class="icon icon-check"></i> Escuela Politécnica Manuel Belgrano</li>
-                        <li><i class="icon icon-check"></i> Escuela Técnica N°12 Libertador Gral. Jose de San Martín</li>
+                        <li><i class="icon icon-check"></i> Escuela Tecnica 4: "Fray Luis Beltrán"</li>
+                         <li><i class="icon icon-check"></i>Escuela Técnica N°10: Fray Luis Beltrán </li>
+                         <li><i class="icon icon-check"></i>Escuela Técnica N°19: Alejandro Volta</li>
+                         <li><i class="icon icon-check"></i>Escuela Técnica N°12 Libertador Gral. José de San Martin</li>
+                         <li><i class="icon icon-check"></i>EEPN 631 Benjamin Gorostiaga</li>
+                         <li><i class="icon icon-check"></i>Esc. Técnica de Laprida</li>
+                         <li><i class="icon icon-check"></i>Técnica nº 4</li>
+                         <li><i class="icon icon-check"></i>Tecnica nº 5</li>
+                         <li><i class="icon icon-check"></i>Técnica nº 1</li>
+                         <li><i class="icon icon-check"></i>Técnica nº 3</li>
+                         <li><i class="icon icon-check"></i>IPET 58</li>
+                         <li><i class="icon icon-check"></i>IPET 89</li>
+                         <li><i class="icon icon-check"></i>Escuela Técnica "Arq. Francisco Pinaroli"</li>
+                         <li><i class="icon icon-check"></i>Escuela Técnica "Fray Luis Beltran"</li>
+                         <li><i class="icon icon-check"></i>EET Nº 20 Ntra Sra del Luján</li>
+                         <li><i class="icon icon-check"></i>EET Nº 28</li>
+                         <li><i class="icon icon-check"></i>ESETP 703</li>
+                         <li><i class="icon icon-check"></i>ESETP 748</li>
+                         <li><i class="icon icon-check"></i>292 - Tt. de Fragata Santiago Barattero</li>
+                         <li><i class="icon icon-check"></i>Escuela de Educación Técnica Nº 4</li>
+                    <li><i class="icon icon-check"></i> Escuela Técnica Nº 1</li>
+                    <li><i class="icon icon-check"></i> Escuela Técnica N°23</li>
+                    <li><i class="icon icon-check"></i> Escuela Técnica N°9</li>
                     </ul>
                 </li>
                 <li class="col-md-4 isotope-item websites">
                     <ul class="list icons list-unstyled">
-                        <li><i class="icon icon-check"></i> Escuela Técnica N°19 A. Volta</li>
-                        <li><i class="icon icon-check"></i> Escuelas Técnicas Raggio</li>
-                        <li><i class="icon icon-check"></i> Escuela Técnica N°17 Brigadier Gral.Cornelio Saavedra</li>
-                        <li><i class="icon icon-check"></i> Escuela Educ. Técnica Fundación Fangio</li>
-                        <li><i class="icon icon-check"></i> Instituto Don Orione</li>
-                        <li><i class="icon icon-check"></i> Colegio N°17 </li>
-                        <li><i class="icon icon-check"></i> Escuela Técnica N°28 República Francesa</li>
-                        <li><i class="icon icon-check"></i> Escuela Técnica N°21 Fragata Libertad</li>
-                        <li><i class="icon icon-check"></i> Escuela Técnica N°25 Fray Luis Beltran</li>
-                        <li><i class="icon icon-check"></i> Escuela Técnica N°29 de 6 Reconquista de Buenos Aires</li>
-                        <li><i class="icon icon-check"></i> Escuela Técnica N°13 Ing. José Luis Delpini</li>
+                    <li><i class="icon icon-check"></i> Escuela de Educación Técnica Nº 7</li>
+                    <li><i class="icon icon-check"></i> Escuela Técnica nº 1 Ing. Luis Michaud</li>
+                    <li><i class="icon icon-check"></i> Escuela Técnica nº 1 Gral. Manuel Belgrano</li>
+                    <li><i class="icon icon-check"></i> EPET Nº1</li>
+                    <li><i class="icon icon-check"></i> EPET Nº 2</li>
+                    <li><i class="icon icon-check"></i> EPET Nº 1</li>
+                    <li><i class="icon icon-check"></i> EPET Nº 1</li>
+                    <li><i class="icon icon-check"></i> Escuela 4-022 Gral. Enrique Mosconi</li>
+                    <li><i class="icon icon-check"></i> Escuela 4-119 Santa María de Oro</li>
+                    <li><i class="icon icon-check"></i> EPET Nº 1</li>
+                    <li><i class="icon icon-check"></i> EPET Nº 8</li>
+                    <li><i class="icon icon-check"></i> EPET N° 8</li>
+                    <li><i class="icon icon-check"></i> EPET N° 3</li>
+                    <li><i class="icon icon-check"></i> Centro de Educación técnica Nº 21</li>
+                    <li><i class="icon icon-check"></i> Centro de Educación Técnica N° 22</li>
+                    <li><i class="icon icon-check"></i> EET N° 3139 - "Martin Miguel de Güemes"</li>
+                    <li><i class="icon icon-check"></i> EET N° 3148 – “Otto Krause"</li>
+                    <li><i class="icon icon-check"></i> E.P.E.T. Nº1 Ing. Rogelio Boero</li>
+                    <li><i class="icon icon-check"></i> EET Domingo Faustino Sarmiento</li>
+                    <li><i class="icon icon-check"></i> Escuela Industrial N° 6</li>
+                    <li><i class="icon icon-check"></i> Escuela Industrial N° 2</li>
+                    <li><i class="icon icon-check"></i> 460 - Guillermo Lehmann</li>
+                    <li><i class="icon icon-check"></i> Escuela de Educación Tecnico Profesional Nº 279</li>
+                    <li><i class="icon icon-check"></i> Escuela Técnica N° 02 "Ingeniero Santiago Barabino"</li>
+                    <li><i class="icon icon-check"></i> Escuela Técnica N° 03 "Ingeniero Santiago Maradona"</li>
+                    <li><i class="icon icon-check"></i> 282 - Regimiento Sexto de Caballería de Línea</li>
+                    <li><i class="icon icon-check"></i> 455 - Gral. Don José de San Martín</li>
+                    <li><i class="icon icon-check"></i> escuela Técnica Nº 2 Obispo Colombres</li>
                     </ul>
 
                 </li>
