--- a/news.html
+++ b/news.html
@@ -162,7 +162,7 @@
   var js, fjs = d.getElementsByTagName(s)[0];
   if (d.getElementById(id)) return;
   js = d.createElement(s); js.id = id;
-  js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&appId=1486606708236596&version=v2.0";
+  js.src = "//connect.facebook.net/es_ES/sdk.js#xfbml=1&appId=1486606708236596&version=v2.0";
   fjs.parentNode.insertBefore(js, fjs);
 }(document, 'script', 'facebook-jssdk'));</script>
 
@@ -182,7 +182,7 @@
 <div class="col-md-12">
 <div class="blog-posts">
 
-<iframe src="http://www.facebook.com/plugins/likebox.php?href=https%3A%2F%2Fwww.facebook.com%2FDesafioEco&amp;width=600&amp;height=1000&amp;colorscheme=light&amp;show_faces=false&amp;header=false&amp;stream=true&amp;show_border=false&amp;appId=1486606708236596" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:100%; height:1000px;" allowTransparency="true"></iframe>
+<iframe src="http://www.facebook.com/plugins/likebox.php?href=https%3A%2F%2Fwww.facebook.com%2FDesafioEco&amp;width=600&amp;height=1000&amp;colorscheme=light&amp;show_faces=false&amp;header=false&amp;stream=true&amp;show_border=false&amp;appId=1486606708236596&amp;locale=es_ES" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:100%; height:1000px;" allowTransparency="true"></iframe>
 
 <!--<ul class="pagination pagination-lg pull-right">-->
 <!--<li><a href="#">«</a></li>-->
