itba y otros cambios

--- a/participantes.html
+++ b/participantes.html
@@ -264,99 +264,105 @@
 
         </div>
 
-
         <div class="row">
 
             <ul class="portfolio-list sort-destination" data-sort-id="portfolio">
                 <li class="col-md-4 isotope-item websites">
                     <ul class="list icons list-unstyled">
-                    <li><i class="icon icon-check"></i> Otto Krausse , Técnica N°1</li>
-                    <li><i class="icon icon-check"></i> Técnica N°11 D.E. 6 Manuel Belgrano</li>
-                    <li><i class="icon icon-check"></i> EEST N°1 "Antonio Bermejo"</li>
-                    <li><i class="icon icon-check"></i> Técnica N°35 DE 18: Ing. Eduardo Latzina</li>
-                    <li><i class="icon icon-check"></i> Colegio Técnico Nº9 "Domingo Faustino Sarmiento"</li>
-                    <li><i class="icon icon-check"></i> Escuela Técnica N° 37 Ing. Germán Áve Lallemant</li>
-                    <li><i class="icon icon-check"></i> Colegio Nº17 V Brigada Aerea V.Mercedes</li>
-                    <li><i class="icon icon-check"></i> Esc. IPEM N°50 "Ing. Emilio F. Olmos"</li>
-                    <li><i class="icon icon-check"></i> Técnica N°25: Tte 1° de Art. Fray Luis Beltrán</li>
-                    <li><i class="icon icon-check"></i> Escuela Politécnica Manuel Belgrano</li>
-                    <li><i class="icon icon-check"></i> Técnica N°29: Reconquista de Buenos Aires</li>
-                    <li><i class="icon icon-check"></i> Técnica N°17 DE 13: Brig.G. Cornelio Saavedra</li>
-                    <li><i class="icon icon-check"></i> Técnica N°34 DE 9: Ing. Enrique Martín Hermitte</li>
-                    <li><i class="icon icon-check"></i> Escuelas Técnicas Raggio</li>
-                    <li><i class="icon icon-check"></i> Escuela Técnica N° 26 Gobernador Elías Adre</li> 
-                    <li><i class="icon icon-check"></i> Técnica N°32 DE 14: Gral. Jose de San Martin</li>
-                    <li><i class="icon icon-check"></i> Técnica N°26: Confederación Suiza</li>
-                    <li><i class="icon icon-check"></i> Técnica N°14 DE 5: Libertad</li>
-                    <li><i class="icon icon-check"></i> Colegio N°15: "Ing. Agustín Mercau"</li>
-                    <li><i class="icon icon-check"></i> Escuela Técnica Superior Pedro Blanes Viale</li>
-                    <li><i class="icon icon-check"></i> Técnica N°8: Paula Albarracin de Sarmiento</li>
-                    <li><i class="icon icon-check"></i> Instituto Nuestra Sra. De Fátima</li>
-                    <li><i class="icon icon-check"></i> Técnica N°13 Ing. J.L. Delpini</li>
-                    <li><i class="icon icon-check"></i> EET N° 5 " 15 de noviembre"  </li>
-                    <li><i class="icon icon-check"></i> Técnica N°21: Fragata Libertad</li>
-                    <li><i class="icon icon-check"></i> Instituto Técnico Don Orione</li>
-                    <li><i class="icon icon-check"></i> Centro Educativo N° 20: Juan W. Gez</li> 
-                    <li><i class="icon icon-check"></i> Técnica N°28: República Francesa</li>
+
+                   <li><i class="icon icon-check"></i>  1 Otto Krausse , Técnica N°1 CABA C.A.B.A.</li>
+                    <li><i class="icon icon-check"></i> 2 Técnica N°11 D.E. 6 Manuel Belgrano CABA C.A.B.A.</li>
+                    <li><i class="icon icon-check"></i> 3 EEST N°1 "Antonio Bermejo" BUENOS AIRES Junin</li>
+                    <li><i class="icon icon-check"></i> 4 Técnica N°35 DE 18: Ing. Eduardo Latzina CABA C.A.B.A.</li>
+                    <li><i class="icon icon-check"></i>5 Colegio Técnico Nº9 "Domingo Faustino Sarmiento" SAN LUIS San Luis</li>
+                    <li><i class="icon icon-check"></i>6 Escuela Técnica N° 37 Ing. Germán Áve Lallemant SAN LUIS Juana Kosleay</li>
+                    <li><i class="icon icon-check"></i>7 Colegio Nº17 V Brigada Aerea V.Mercedes San Luis Villa Reynolds </li>
+                    <li><i class="icon icon-check"></i>8 Esc. IPEM N°50 "Ing. Emilio F. Olmos" Córdoba San Francisco</li>
+                    <li><i class="icon icon-check"></i>9 Técnica N°25: Tte 1° de Art. Fray Luis Beltrán CABA C.A.B.A.</li>
+                    <li><i class="icon icon-check"></i>10 Escuela Politécnica Manuel Belgrano CABA C.A.B.A.</li>
+                    <li><i class="icon icon-check"></i>11 Técnica N°29: Reconquista de Buenos Aires CABA C.A.B.A.</li>
+                    <li><i class="icon icon-check"></i>12 Técnica N°17 DE 13: Brig.G. Cornelio Saavedra CABA C.A.B.A.</li>
+                    <li><i class="icon icon-check"></i>13 Técnica N°34 DE 9: Ing. Enrique Martín Hermitte CABA C.A.B.A.</li>
+                    <li><i class="icon icon-check"></i>14 Escuelas Técnicas Raggio CABA C.A.B.A.</li>
+                    <li><i class="icon icon-check"></i>15 Escuela Técnica N° 26 Gobernador Elías Adre San Luis Concarán</li>
+                    <li><i class="icon icon-check"></i>16 Técnica N°32 DE 14: Gral. Jose de San Martin CABA C.A.B.A.</li>
+                    <li><i class="icon icon-check"></i>17 Técnica N°26: Confederación Suiza CABA C.A.B.A.</li>
+                    <li><i class="icon icon-check"></i>18 Técnica N°14 DE 5: Libertad CABA C.A.B.A.</li>
+                    <li><i class="icon icon-check"></i>20 Colegio N°15: "Ing. Agustín Mercau" San Luis Villa Mercedes </li>
+                    <li><i class="icon icon-check"></i>22 Escuela Técnica Superior Pedro Blanes Viale URUGUAY Soriano</li>
+                    <li><i class="icon icon-check"></i>23 Técnica N°8: Paula Albarracin de Sarmiento CABA C.A.B.A.</li>
+                    <li><i class="icon icon-check"></i>24 Instituto Nuestra Sra. De Fátima CABA C.A.B.A.</li>
+                    <li><i class="icon icon-check"></i>25 Técnica N°13 Ing. J.L. Delpini CABA C.A.B.A.</li>
+                    <li><i class="icon icon-check"></i>26 EET N° 5 " 15 de noviembre" ENTRE RIOS Gualeguaychu</li>
+                    <li><i class="icon icon-check"></i>27 Técnica N°21: Fragata Libertad CABA C.A.B.A.</li>
                     </ul>
                 </li>
                 <li class="col-md-4 isotope-item websites">
                     <ul class="list icons list-unstyled">
-                        <li><i class="icon icon-check"></i> Escuela Tecnica 4: "Fray Luis Beltrán"</li>
-                         <li><i class="icon icon-check"></i>Escuela Técnica N°10: Fray Luis Beltrán </li>
-                         <li><i class="icon icon-check"></i>Escuela Técnica N°19: Alejandro Volta</li>
-                         <li><i class="icon icon-check"></i>Escuela Técnica N°12 Libertador Gral. José de San Martin</li>
-                         <li><i class="icon icon-check"></i>EEPN 631 Benjamin Gorostiaga</li>
-                         <li><i class="icon icon-check"></i>Esc. Técnica de Laprida</li>
-                         <li><i class="icon icon-check"></i>Técnica nº 4</li>
-                         <li><i class="icon icon-check"></i>Tecnica nº 5</li>
-                         <li><i class="icon icon-check"></i>Técnica nº 1</li>
-                         <li><i class="icon icon-check"></i>Técnica nº 3</li>
-                         <li><i class="icon icon-check"></i>IPET 58</li>
-                         <li><i class="icon icon-check"></i>IPET 89</li>
-                         <li><i class="icon icon-check"></i>Escuela Técnica "Arq. Francisco Pinaroli"</li>
-                         <li><i class="icon icon-check"></i>Escuela Técnica "Fray Luis Beltran"</li>
-                         <li><i class="icon icon-check"></i>EET Nº 20 Ntra Sra del Luján</li>
-                         <li><i class="icon icon-check"></i>EET Nº 28</li>
-                         <li><i class="icon icon-check"></i>ESETP 703</li>
-                         <li><i class="icon icon-check"></i>ESETP 748</li>
-                         <li><i class="icon icon-check"></i>292 - Tt. de Fragata Santiago Barattero</li>
-                         <li><i class="icon icon-check"></i>Escuela de Educación Técnica Nº 4</li>
-                    <li><i class="icon icon-check"></i> Escuela Técnica Nº 1</li>
-                    <li><i class="icon icon-check"></i> Escuela Técnica N°23</li>
-                    <li><i class="icon icon-check"></i> Escuela Técnica N°9</li>
+
+
+                    <li><i class="icon icon-check"></i>28 Instituto Técnico Don Orione CABA C.A.B.A.</li>
+                    <li><i class="icon icon-check"></i>29 Centro Educativo N° 20: Juan W. Gez San Luis Villa Mercedes</li> 
+                    <li><i class="icon icon-check"></i>30 Técnica N°28: República Francesa CABA C.A.B.A.</li>
+                    <li><i class="icon icon-check"></i>31 Escuela Tecnica 4: "Fray Luis Beltrán" San Luis San Luis</li>
+                    <li><i class="icon icon-check"></i>32 Escuela Técnica N°10: Fray Luis Beltrán CABA C.A.B.A.</li>
+                        <li><i class="icon icon-check"></i>33 Escuela Técnica N°19: Alejandro Volta CABA C.A.B.A.</li>
+                        <li><i class="icon icon-check"></i> 34 Escuela Técnica N°12 Libertador Gral. José de San Martin CABA C.A.B.A.</li>
+                        <li><i class="icon icon-check"></i> 35 EEPN 631 Benjamin Gorostiaga Santa Fe San Carlos</li>
+                        <li><i class="icon icon-check"></i> 36 Esc. Técnica de Laprida Buenos Aires Laprida</li>
+                        <li><i class="icon icon-check"></i> 37 Técnica nº 4 BUENOS AIRES Mar del Plata</li>
+                        <li><i class="icon icon-check"></i> 39 Tecnica nº5 BUENOS AIRES Temperley</li>
+                        <li><i class="icon icon-check"></i> 40 Técnica nº 1 BUENOS AIRES Mar del Plata</li>
+                        <li><i class="icon icon-check"></i> 41 Técnica nº 3 BUENOS AIRES Mar del Plata</li>
+                        <li><i class="icon icon-check"></i> 42 IPET 58 CORDOBA LA PUERTA</li>
+                        <li><i class="icon icon-check"></i> 43 IPET 89 CORDOBA DEVOTO</li>
+                        <li><i class="icon icon-check"></i> 44 Escuela Técnica "Arq. Francisco Pinaroli" CORRIENTES Goya</li>
+                        <li><i class="icon icon-check"></i> 45 Escuela Técnica "Fray Luis Beltran" CORRIENTES Corrientes</li>
+                        <li><i class="icon icon-check"></i> 46 EET Nº 20 Ntra Sra del Luján CHACO TRES ISLETAS</li>
+                        <li><i class="icon icon-check"></i> 47 EET Nº 28 CHACO Machagai</li>
+                        <li><i class="icon icon-check"></i> 48 ESETP 703 CHUBUT Puerto Madryn</li>
+                        <li><i class="icon icon-check"></i> 49 ESETP 748 CHUBUT Trelew</li>
+
+                    <li><i class="icon icon-check"></i> 50 292 - Tt. de Fragata Santiago Barattero SANTA FE San Vicente</li>
+                    <li><i class="icon icon-check"></i> 51 Escuela de Educación Técnica Nº 4 FORMOSA El Colorado</li>
+                    <li><i class="icon icon-check"></i> 52 Escuela de Educación Técnica Nº 7 FORMOSA Formosa</li>
+                    
+                    <li><i class="icon icon-check"></i> 53 Escuela Técnica nº 1 Ing. Luis Michaud JUJUY El Carmen</li>
+                    <li><i class="icon icon-check"></i> 54 Escuela Técnica nº 1 Gral. Manuel Belgrano JUJUY Maimará</li>
+                    <li><i class="icon icon-check"></i> 55 EPET Nº1 LA PAMPA Santa Rosa</li>
+
                     </ul>
+
                 </li>
                 <li class="col-md-4 isotope-item websites">
                     <ul class="list icons list-unstyled">
-                    <li><i class="icon icon-check"></i> Escuela de Educación Técnica Nº 7</li>
-                    <li><i class="icon icon-check"></i> Escuela Técnica nº 1 Ing. Luis Michaud</li>
-                    <li><i class="icon icon-check"></i> Escuela Técnica nº 1 Gral. Manuel Belgrano</li>
-                    <li><i class="icon icon-check"></i> EPET Nº1</li>
-                    <li><i class="icon icon-check"></i> EPET Nº 2</li>
-                    <li><i class="icon icon-check"></i> EPET Nº 1</li>
-                    <li><i class="icon icon-check"></i> EPET Nº 1</li>
-                    <li><i class="icon icon-check"></i> Escuela 4-022 Gral. Enrique Mosconi</li>
-                    <li><i class="icon icon-check"></i> Escuela 4-119 Santa María de Oro</li>
-                    <li><i class="icon icon-check"></i> EPET Nº 1</li>
-                    <li><i class="icon icon-check"></i> EPET Nº 8</li>
-                    <li><i class="icon icon-check"></i> EPET N° 8</li>
-                    <li><i class="icon icon-check"></i> EPET N° 3</li>
-                    <li><i class="icon icon-check"></i> Centro de Educación técnica Nº 21</li>
-                    <li><i class="icon icon-check"></i> Centro de Educación Técnica N° 22</li>
-                    <li><i class="icon icon-check"></i> EET N° 3139 - "Martin Miguel de Güemes"</li>
-                    <li><i class="icon icon-check"></i> EET N° 3148 – “Otto Krause"</li>
-                    <li><i class="icon icon-check"></i> E.P.E.T. Nº1 Ing. Rogelio Boero</li>
-                    <li><i class="icon icon-check"></i> EET Domingo Faustino Sarmiento</li>
-                    <li><i class="icon icon-check"></i> Escuela Industrial N° 6</li>
-                    <li><i class="icon icon-check"></i> Escuela Industrial N° 2</li>
-                    <li><i class="icon icon-check"></i> 460 - Guillermo Lehmann</li>
-                    <li><i class="icon icon-check"></i> Escuela de Educación Tecnico Profesional Nº 279</li>
-                    <li><i class="icon icon-check"></i> Escuela Técnica N° 02 "Ingeniero Santiago Barabino"</li>
-                    <li><i class="icon icon-check"></i> Escuela Técnica N° 03 "Ingeniero Santiago Maradona"</li>
-                    <li><i class="icon icon-check"></i> 282 - Regimiento Sexto de Caballería de Línea</li>
-                    <li><i class="icon icon-check"></i> 455 - Gral. Don José de San Martín</li>
-                    <li><i class="icon icon-check"></i> escuela Técnica Nº 2 Obispo Colombres</li>
+                    <li><i class="icon icon-check"></i> 56 EPET Nº 2 LA PAMPA General Pico</li>
+                    <li><i class="icon icon-check"></i> 57 EPET Nº 1 LA RIOJA CHEPES</li>
+                    <li><i class="icon icon-check"></i> 58 EPET Nº 1 LA RIOJA CHAMICAL</li>
+                    <li><i class="icon icon-check"></i> 59 Escuela 4-022 Gral. Enrique Mosconi MENDOZA Chacras de Coria</li>
+                    <li><i class="icon icon-check"></i> 60 Escuela 4-119 Santa María de Oro MENDOZA Santa María de Oro</li>
+                    <li><i class="icon icon-check"></i> 61 EPET Nº 1 MISIONES Posadas</li>
+                    <li><i class="icon icon-check"></i> 62 EPET Nº 8 MISIONES Aristóbulo del Valle</li>
+                    <li><i class="icon icon-check"></i> 63 EPET N° 8 NEUQUEN Neuquen</li>
+                    <li><i class="icon icon-check"></i> 64 EPET N° 3 NEUQUEN Neuquen</li>
+                    <li><i class="icon icon-check"></i> 65 Centro de Educación técnica Nº 21 RIO NEGRO Catriel</li>
+                    <li><i class="icon icon-check"></i> 66 Centro de Educación Técnica N° 22 RIO NEGRO Cipolletti</li>
+                    <li><i class="icon icon-check"></i> 67 EET N° 3139 - "Martin Miguel de Güemes" SALTA Salta</li>
+                    <li><i class="icon icon-check"></i> 68 EET N° 3148 – “Otto Krause" SALTA Salta</li>
+                    <li><i class="icon icon-check"></i> 69 E.P.E.T. Nº1 Ing. Rogelio Boero SAN JUAN San Juan</li>
+                    <li><i class="icon icon-check"></i> 70 EET Domingo Faustino Sarmiento SAN JUAN San Juan</li>
+                    <li><i class="icon icon-check"></i> 71 Escuela Industrial N° 6 SANTA CRUZ Rio Gallegos</li>
+                    <li><i class="icon icon-check"></i> 72 Escuela Industrial N° 2 SANTA CRUZ Pico Truncado</li>
+                    <li><i class="icon icon-check"></i> 73 460 - Guillermo Lehmann SANTA FE Rafaela</li>
+                    <li><i class="icon icon-check"></i> 74 Escuela de Educación Tecnico Profesional Nº 279 SANTA FE Sunchales</li>
+                    <li><i class="icon icon-check"></i> 75 Escuela Técnica N° 02 "Ingeniero Santiago Barabino" SANTIAGO DEL ESTERO La Banda</li>
+                    <li><i class="icon icon-check"></i> 76 Escuela Técnica N° 03 "Ingeniero Santiago Maradona SANTIAGO DEL ESTERO Santiago del Estero</li>
+                    <li><i class="icon icon-check"></i> 77 282 - Regimiento Sexto de Caballería de Línea SANTA FE Tostado</li>
+                    <li><i class="icon icon-check"></i> 78 455 - Gral. Don José de San Martín SANTA FE Esperanza</li>
+                    <li><i class="icon icon-check"></i> 79 escuela Técnica Nº 2 Obispo Colombres TUCUMAN Tucumán</li>
+                    <li><i class="icon icon-check"></i> 80 Escuela Técnica Nº 1 TUCUMAN Bella Vista</li>
+                    <li><i class="icon icon-check"></i> 81 Escuela Técnica N°23 CABA C.A.B.A.</li>
+                    <li><i class="icon icon-check"></i> 82 Escuela Técnica N°9 CABA C.A.B.A.</li>
                     </ul>
 
                 </li>
