--- a/participar.html
+++ b/participar.html
@@ -253,11 +253,14 @@
 
 </div>
 
+
+
+
 <section class="highlight top center">
 <div class="container">
 
     <h2 style="width: 90%; float: left; margin-bottom: 20px;">Contactate con el ITBA para resolver tus dudas técnicas:</h2>
-    <a  href="mailto:jzubiri@itba.edu.ar"
+    <a  href="itba.html"
         class="btn btn-primary center" style="background-color:#0099e6"> Asesoramiento técnico<br/>
         <img class="center" src="img/logo-itba.png" alt="" style="width: 230px;">
 
