--- a/itba.html
+++ b/itba.html
@@ -6,10 +6,27 @@
 <!--[if gt IE 9]><!-->
 <html> <!--<![endif]-->
 <head>
+<script>
+      window.fbAsyncInit = function() {
+        FB.init({
+          appId      : '1486606708236596',
+          xfbml      : true,
+          version    : 'v2.1'
+        });
+      };
+
+      (function(d, s, id){
+         var js, fjs = d.getElementsByTagName(s)[0];
+         if (d.getElementById(id)) {return;}
+         js = d.createElement(s); js.id = id;
+         js.src = "//connect.facebook.net/en_US/sdk.js";
+         fjs.parentNode.insertBefore(js, fjs);
+       }(document, 'script', 'facebook-jssdk'));
+    </script>
 
     <!-- Basic -->
     <meta charset="utf-8">
-    <title>Desafioeco</title>
+    <title>DesafioEco</title>
     <meta name="keywords" content="HTML5 Template"/>
     <meta name="description" content="Porto - Responsive HTML5 Template - 2.7.0">
     <meta name="author" content="okler.net">
@@ -34,8 +51,7 @@
     <link rel="stylesheet" href="css/theme-animate.css">
 
     <!-- Current Page Styles -->
-    <link rel="stylesheet" href="vendor/rs-plugin/css/settings.css" media="screen">
-    <link rel="stylesheet" href="vendor/circle-flip-slideshow/css/component.css" media="screen">
+    <link rel="stylesheet" href="css/theme-blog.css" media="screen">
 
     <!-- Skin CSS -->
     <link rel="stylesheet" href="css/skins/green.css">
@@ -58,7 +74,10 @@
     <![endif]-->
 
 </head>
-<body class="one-page" data-target=".single-menu" data-spy="scroll" data-offset="200">
+<body>
+<div id="fb-root"></div>
+
+
 
 <div class="body">
 <header class="single-menu flat-menu">
@@ -106,9 +125,7 @@
                     <li>
                         <a href="participantes.html">Escuelas</a>
                     </li>
-
-
- <li class="dropdown">
+                     <li class="dropdown">
                         <a class="dropdown-toggle" href="#">
                             Reglamentos
                             <i class="icon icon-angle-down"></i>
@@ -116,7 +133,8 @@
                         <ul class="dropdown-menu">
                             <li><a href="doc/reglamento.pdf"  target="_blank">Reglamento deportivo</a></li>
                             <li><a href="doc/reglamento_tecnico.pdf"  target="_blank">Reglamento técnico</a></li>
-                            <li><a href="doc/inscricion.zip"  target="_blank">Formularios de inscripción</a></li>
+                                                        <li><a href="doc/inscricion.zip"  target="_blank">Formularios de inscripción</a></li>
+
                         </ul>
                     </li>
                     <li class="dropdown">
@@ -130,7 +148,7 @@
                         </ul>
                     </li>
 
-                    <li  class="active">
+                    <li>
                         <a href="contacto.html">Contacto</a>
                     </li>
                 </ul>
@@ -139,103 +157,58 @@
     </div>
 </header>
 
-			<div role="main" class="main">
+<div role="main" class="main">
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/es_ES/sdk.js#xfbml=1&appId=1486606708236596&version=v2.0";
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
 
-				<section class="page-top">
+<section class="page-top">
     <div class="container">
         <div class="row">
             <div class="col-md-12">
-                <h2>Contacto</h2>
+                <h2>Foro de consultas</h2>
             </div>
         </div>
     </div>
 </section>
 
-				<!-- Google Maps -->
-				<div id="googlemaps" class="google-map hidden-xs"></div>
-
-				<div class="container">
-
-					<div class="row">
-						<div class="col-md-12">
-
-							<div class="alert alert-success hidden" id="contactSuccess">
-								<strong>Perfecto!</strong> Tu mensaje se envió correctamente.
-							</div>
-
-							<div class="alert alert-danger hidden" id="contactError">
-								<strong>Error!</strong> Hubo algún problema, por favor intentá de nuevo.
-							</div>
-
-							<h2 class="short"><strong>Envianos tus </strong>consultas</h2>
-							<form action="php/contact-form.php" id="contactForm" type="post">
-								<div class="row">
-									<div class="form-group">
-										<div class="col-md-6">
-											<label>Nombre *</label>
-											<input type="text" value="" data-msg-required="Ingresá tu nombre." maxlength="100" class="form-control" name="name" id="name">
-										</div>
-										<div class="col-md-6">
-											<label>Email *</label>
-											<input type="email" value="" data-msg-required="Ingresá tu email." data-msg-email="Ingrese un email válido." maxlength="100" class="form-control" name="email" id="email">
-										</div>
-									</div>
-								</div>
-								<div class="row">
-									<div class="form-group">
-										<div class="col-md-12">
-											<label>Asunto</label>
-											<input type="text" value="" data-msg-required="Ingrese el asunto." maxlength="100" class="form-control" name="subject" id="subject">
-										</div>
-									</div>
-								</div>
-								<div class="row">
-									<div class="form-group">
-										<div class="col-md-12">
-											<label>Mensaje *</label>
-											<textarea maxlength="5000" data-msg-required="Ingrese su mensaje." rows="10" class="form-control" name="message" id="message"></textarea>
-										</div>
-									</div>
-								</div>
-								<div class="row">
-									<div class="col-md-12">
-										<input type="submit" value="Enviar Mesnsaje" class="btn btn-primary btn-lg" data-loading-text="Espere...">
-									</div>
-								</div>
-							</form>
-						</div>
-						
-
-					</div>
-
-				</div>
-
-			</div>
-
-		
-<section class="highlight top center">
 <div class="container">
 
-    <h2 style="width: 90%; float: left; margin-bottom: 20px;">Contactate con el ITBA para resolver tus dudas técnicas:</h2>
-    <a  href="itba.html"
-        class="btn btn-primary center" style="background-color:#0099e6"> Asesoramiento técnico<br/>
-        <img class="center" src="img/logo-itba.png" alt="" style="width: 230px;">
+<div class="row">
+<div class="col-md-12">
+<div class="blog-posts">
 
-</a>
+<iframe id="forum_embed"
+  src="http://groups.google.com/forum/embed/?place=forum/consultas-itba&showsearch=true&showpopout=true&showtabs=false"
+  scrolling="no"
+  frameborder="0"
+  width="100%"
+  height="1000px">
+</iframe>
+<!--<ul class="pagination pagination-lg pull-right">-->
+<!--<li><a href="#">«</a></li>-->
+<!--<li class="active"><a href="#">1</a></li>-->
+<!--<li><a href="#">2</a></li>-->
+<!--<li><a href="#">3</a></li>-->
+<!--<li><a href="#">»</a></li>-->
+<!--</ul>-->
+
+</div>
+</div>
+
 
 </div>
 
-<div class="container">
-
-    <h2 style="width: 90%; float: left; margin-bottom: 20px;">Enviá un mail a Movete Verde para hacer consultas:</h2>
-    <a  href="mailto:info@moveteverde.com.ar"
-        class="btn btn-primary center" style="background-color:#0099e6"> info@moveteverde.com.ar<br/>
-</a>
+</div>
 
 </div>
 
-</section>
-<footer class="short" id="footer" style="margin-top: -50px">
+
+<footer class="short" id="footer">
                 <div class="container">
                     <div class="row">
                         <div class="col-md-8">
@@ -271,105 +244,43 @@
                     </div>
                 </div>
             </footer>
-		</div>
+</div>
 
-		<!-- Libs -->
-		<script src="vendor/jquery.js"></script>
-		<script src="js/plugins.js"></script>
-		<script src="vendor/jquery.easing.js"></script>
-		<script src="vendor/jquery.appear.js"></script>
-		<script src="vendor/jquery.cookie.js"></script>
-		
-		<script src="vendor/bootstrap.js"></script>
-		<script src="vendor/twitterjs/twitter.js"></script>
-		<script src="vendor/owl-carousel/owl.carousel.js"></script>
-		<script src="vendor/jflickrfeed/jflickrfeed.js"></script>
-		<script src="vendor/magnific-popup/magnific-popup.js"></script>
-		<script src="vendor/jquery.validate.js"></script>
+<!-- Libs -->
+<script src="vendor/jquery.js"></script>
+<script src="js/plugins.js"></script>
+<script src="vendor/jquery.easing.js"></script>
+<script src="vendor/jquery.appear.js"></script>
+<script src="vendor/jquery.cookie.js"></script>
 
-		<script src="http://maps.google.com/maps/api/js?sensor=false"></script>
-		<script src="vendor/jquery.gmap.js"></script>
+<script src="vendor/bootstrap.js"></script>
+<script src="vendor/twitterjs/twitter.js"></script>
+<script src="vendor/owl-carousel/owl.carousel.js"></script>
+<script src="vendor/jflickrfeed/jflickrfeed.js"></script>
+<script src="vendor/magnific-popup/magnific-popup.js"></script>
+<script src="vendor/jquery.validate.js"></script>
 
-		<script>
+<!-- Theme Initializer -->
+<script src="js/theme.js"></script>
 
-			/*
-			Map Settings
+<!-- Custom JS -->
+<script src="js/custom.js"></script>
 
-				Find the Latitude and Longitude of your address:
-					- http://universimmedia.pagesperso-orange.fr/geo/loc.htm
-					- http://www.findlatitudeandlongitude.com/find-address-from-latitude-and-longitude/
+<!-- Google Analytics: Change UA-XXXXX-X to be your site's ID. Go to http://www.google.com/analytics/ for more information.
+<script type="text/javascript">
 
-			*/
+    var _gaq = _gaq || [];
+    _gaq.push(['_setAccount', 'UA-12345678-1']);
+    _gaq.push(['_trackPageview']);
 
-			// Map Markers
-			var mapMarkers = [
-			// {
-			// 	address: "New York, NY 10017",
-			// 	html: "<strong>New York Office</strong><br>New York, NY 10017",
-			// 	icon: {
-			// 		image: "img/pin.png",
-			// 		iconsize: [26, 46],
-			// 		iconanchor: [12, 46]
-			// 	},
-			// 	popup: true
-			// }
-			];
+    (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+    })();
 
-			// Map Initial Location
-			var initLatitude = -34.6040;
-			var initLongitude = -58.3804;
+</script>
+ -->
 
-			// Map Extended Settings
-			var mapSettings = {
-				controls: {
-					panControl: true,
-					zoomControl: true,
-					mapTypeControl: true,
-					scaleControl: true,
-					streetViewControl: true,
-					overviewMapControl: true
-				},
-				scrollwheel: false,
-				markers: mapMarkers,
-				latitude: initLatitude,
-				longitude: initLongitude,
-				zoom: 16
-			};
-
-			var map = $("#googlemaps").gMap(mapSettings);
-
-			// Map Center At
-			var mapCenterAt = function(options, e) {
-				e.preventDefault();
-				$("#googlemaps").gMap("centerAt", options);
-			}
-
-		</script>
-
-		<!-- Page Scripts -->
-		<script src="js/views/view.contact.js"></script>
-
-		<!-- Theme Initializer -->
-		<script src="js/theme.js"></script>
-
-		<!-- Custom JS -->
-		<script src="js/custom.js"></script>
-
-		<!-- Google Analytics: Change UA-XXXXX-X to be your site's ID. Go to http://www.google.com/analytics/ for more information.
-		<script type="text/javascript">
-
-			var _gaq = _gaq || [];
-			_gaq.push(['_setAccount', 'UA-12345678-1']);
-			_gaq.push(['_trackPageview']);
-
-			(function() {
-			var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-			ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-			var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-			})();
-
-		</script>
-		 -->
-
-	</body>
+</body>
 </html>
